<resources>
    <string name="app_name">QrScanner</string>
    <string name="share_via">Share via</string>
    <string name="check_out_this_amazing_app">Check out this amzing app</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="settings">Settings</string>
    <string name="language_trans">Language</string>
    <string name="rate_us">Rate us</string>
    <string name="permission">Permission</string>
    <string name="content_dialog_per_noti">Note: You can also grant permission in <b>Settings</b> -> <b>Apps</b> -> <b>QR Scanner</b> -> <b>Notifications</b> </string>
    <string name="content_dialog_camera">Note: You can also grant permission in <b>Settings</b> -> <b>Apps</b> -> <b>QR Scanner</b> -> <b>Camera</b></string>
    <string name="content_dialog_contact">Note: You can also grant permission in <b>Settings</b> -> <b>Apps</b> -> <b>QR Scanner</b> -> <b>Contact</b> </string>
    <string name="content_dialog_location">Note: You can also grant permission in <b>Settings</b> -> <b>Apps</b> -> <b>QR Scanner</b> -> <b>Location</b></string>
    <string name="content_dialog_per_storage_33_after">Note: You can also grant permission in <b>Settings</b> -> <b>Apps</b> -> <b>QR Scanner</b> -> <b>Image</b></string>
    <string name="content_dialog_per_storage_33_before">Note: You can also grant permission in <b>Settings</b> -> <b>Apps</b> -> <b>QR Scanner</b> -> <b>Storage</b> </string>
    <string name="content_dialog_per_all_permissions_33">
    Note: You can also grant permissions in <b>Settings</b> -> <b>Apps</b> -> <b>QR Scanner</b> and enable:
        <br /><b>Notifications</b>
        <br /><b>Camera</b>
        <br /><b>Image</b>
    </string>
    <string name="content_dialog_per_all_permissions_32">
        Note: You can also grant permissions in <b>Settings</b> -> <b>Apps</b> -> <b>QR Scanner</b> and enable:
        <br /><b>Camera</b>
        <br /><b>Storage</b>
    </string>
    <string name="quit_btn">Quit</string>
    <string name="agree">Agree</string>
    <string name="stay">Stay</string>
    <string name="grant_these_permissions_to_use_app">Grant these permissions to use <b>QR Scanner</b></string>
    <string name="title_dialog_per">Grant these permissions to use <b>QR Scanner</b></string>
    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="thank_you">Thank you</string>
    <string name="not_now">Not now</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this <b>QR Scanner</b>, would \nyou mind rating us on the Google Play, then?</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="get_started">Get started</string>
    <string name="quit">Quit?</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <string name="please_choose_a_language">Please choose a language</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="you_are_offline_please">You are offline. Please check your internet connection and try again.</string>
    <string name="got_it">Got it</string>
    <string name="continues">Continues</string>
    <string name="ok">OK</string>
    <string name="result">Result</string>
    <string name="intro_title_1">Fast &amp; Easy QR Scanning!</string>
    <string name="intro_title_2">Super Easy to Use!</string>
    <string name="intro_title_3">Allow Camera Access</string>
    <string name="intro_content_1"> Easily scan and decode any QR code in seconds. No complicated steps required!</string>
    <string name="intro_content_2">Open the app, point your camera, and get instant results.</string>
    <string name="intro_content_3">We need your camera to scan QR codes—privacy guaranteed!</string>
    <string name="this_app_nedd_permission">This app requires the following permissions to provide services for you:</string>
    <string name="notification">Notification</string>
    <string name="camera">Camera</string>
    <string name="file_access">File</string>
    <string name="guide">Guide</string>
    <string name="step">"Step "</string>
    <string name="guide_item_1">Ensure the code is well-lit, avoiding any reflections or shadows.</string>
    <string name="guide_item_3">Keep your hand steady as the app automatically detects and scans the code.</string>
    <string name="guide_item_2">Hold your phone directly in front of the code, keeping it level without tilting.</string>
    <string name="create">Create</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="setting">Settings</string>
    <string name="qr_code">QR Code</string>
    <string name="clipboard">From Clipboard</string>
    <string name="general">General</string>
    <string name="color_theme">Color Theme</string>
    <string name="theme_1">Blue</string>
    <string name="theme_2">Pink</string>
    <string name="theme_3">Green</string>
    <string name="theme_4">Denim</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="highlight_color">Higlight Color</string>
    <string name="save">Save</string>
    <string name="more">More</string>
    <string name="from_clipboard">From Clipboard</string>
    <string name="url">URL</string>
    <string name="text">Text</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="calendar">Calendar</string>
    <string name="wifi">Wifi</string>
    <string name="create_qr">Create QR</string>
    <string name="maximum">Maximum</string>
    <string name="character">character</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="please_fill_outline">Please fill out this field.</string>
    <string name="enter_name">Enter name</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="camera_request_detail">“QR Scanner” would like to access the Camera</string>
    <string name="allow">Allow</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="foreground_color">Foreground Color</string>
    <string name="edit_qr">Edit Qr</string>
    <string name="background_color">Background Color</string>
    <string name="logo">Logo</string>
    <string name="add_photo">Add photo</string>
    <string name="message_delete">Are you sure you want to delete this QR code?</string>
    <string name="coppy">Copy</string>
    <string name="cant_share_file">Can\'t share file now</string>
    <string name="save_to_gallery_fail">Can\'t save Qr to gellery  now</string>
    <string name="save_to_gallery">Save QR successfully</string>
    <string name="coppy_success">Copy successfully</string>
    <string name="barcode">Barcode</string>
    <string name="attemp_value">Attempting to connect to </string>
    <string name="faild_connect_to">Failed to connect to</string>
    <string name="connect_to">Connected to </string>
    <string name="phone_number">Phone number</string>
    <string name="enter_email">Enter email</string>
    <string name="note">Description</string>
    <string name="notes">Note</string>
    <string name="please_enter_something">Please enter something</string>
    <string name="invalid_email_format">Please fill in correct format.</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="message">Message</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longitude</string>
    <string name="query">Query</string>
    <string name="enter_event_name">Enter name\'s event </string>
    <string name="start_date">Start date(dd/mm/yyyy HH:MM)</string>
    <string name="end_date">End date(dd/mm/yyyy HH:MM)</string>
    <string name="select_time">Select time</string>
    <string name="enter_time">Enter time</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="all_day_event">All day event</string>
    <string name="event">Event</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="enter_pass">Enter password</string>
    <string name="wireless_security">Wireless security</string>
    <string name="enter_name_network">Enter name’s network</string>
    <string name="security">Security</string>
    <string name="no_favorite_app">No favorites yet.</string>
    <string name="no_history_app">No history yet.</string>
    <string name="remove_favorite_success">The code has been removed from favorites.</string>
    <string name="canot_get_qr_code">Can\'t get value from qrcode </string>
    <string name="canot_create_barcode_code">Can\'t create barcode now!</string>
    <string name="can_load_qr_image">Can\'t load qr code</string>
    <string name="open">Open</string>
    <string name="search">Search</string>
    <string name="mail">Mail</string>
    <string name="no_email_app">Can\'t send mail now</string>
    <string name="dialer">Dialer</string>
    <string name="map">Map</string>
    <string name="coppy_pass">Copy password</string>
    <string name="connection">Connect</string>
    <string name="theme_app_has_save">Save successful color themes</string>
    <string name="choose_contact">Choose a Contact</string>
    <string name="require_internet_to_connect_to">Network requirements connected with</string>
    <string name="done">Done</string>
    <string name="selected">Selected</string>
    <string name="can_remove_data">Cannot remove favorite</string>
    <string name="deney">Deny</string>
    <string name="camera_access_require">Camera access is required to use this function.</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_company">Enter company</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="invalid_url">Invalid url</string>
    <string name="invalid_latitude_format">Invalid latitude format</string>
    <string name="latitude_out_of_range">Latitude must be between -90 and 90 degrees.</string>
    <string name="invalid_longitude_format">Invalid longitude format</string>
    <string name="longitude_out_of_range">Longitude must be between -180 and 180 degrees.</string>
    <string name="require_pass">Require password</string>
    <string name="require">"Require "</string>
    <string name="invalid_barcode_message">Invalid value</string>
    <string name="enter_code">Enter code</string>
    <string name="enter_your_title">Enter your title</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_here">Enter here</string>
    <string name="can_save_qr_now">Can\'t save Qr code now</string>
    <string name="qr_saved_to_gallery">Qr code save to gallery</string>
    <string name="qr_already_saved_to_gallery">Qr code already save to gallery</string>
    <string name="do_you_want_to_delete">Do you want to delete this history?</string>
</resources>