<?xml version="1.0" encoding="utf-8"?>
<com.dong.baselib.widget.layout.UiLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_12sdp"
    app:cornerRadius="@dimen/_12sdp"
    app:bgColorDark="@color/white"
    app:bgColorLight="@color/white"
    android:padding="@dimen/_12sdp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:fontFamily="@font/bv_600"
        android:textSize="@dimen/_14sdp"
        android:includeFontPadding="false"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:fontFamily="@font/bv_400"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:includeFontPadding="false"
        android:text="@string/do_you_want_to_delete"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_marginTop="@dimen/_18sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.dong.baselib.widget.view.UiTextView
            android:id="@+id/tvStay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:fontFamily="@font/bv_400"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_9sdp"
            android:text="@string/cancel"
            android:textColor="@color/Gray_Cloud"
            android:textSize="@dimen/_14ssp"
            app:bgGdOrientation="bottom_top"
            app:cornerRadius="@dimen/_24sdp"
            app:stColorDark="@color/color_e0e0e0"
            app:stColorLight="@color/color_e0e0e0"
            app:strokeWidth="1.8dp" />

        <com.dong.baselib.widget.view.UiTextView
            android:id="@+id/tvAgree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/bv_400"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_9sdp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:bgGradientCenter="@color/Ruby_Red"
            app:bgGradientEnd="@color/Ruby_Red"
            app:bgGradientStart="@color/Ruby_Red"
            app:cornerRadius="@dimen/_24sdp" />
    </LinearLayout>


</com.dong.baselib.widget.layout.UiLinearLayout>