<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12sdp"
    android:background="@drawable/bg_edit_text_rounded"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_gravity="center"
        android:src="@drawable/img_camera_request"
        android:layout_height="@dimen/_60sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:fontFamily="@font/bv_400"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginVertical="@dimen/_12sdp"
        android:includeFontPadding="false"
        android:textSize="@dimen/_12sdp"
        android:text="@string/camera_access_require"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.dong.baselib.widget.view.UiTextView
            android:id="@+id/tvStay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/bv_500"
            android:gravity="center"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/stay"
            android:textColor="@color/Gray_Goose"
            android:textSize="@dimen/_12ssp"
            app:bgGdOrientation="bottom_top"
            app:cornerRadius="@dimen/_24sdp"
            app:stColorDark="@color/color_e0e0e0"
            app:stColorLight="@color/color_e0e0e0"
            app:strokeWidth="1.8dp" />

        <com.dong.baselib.widget.view.UiTextView
            android:id="@+id/tvAgree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/bv_500"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:bgGradientCenter="@color/gradientC"
            app:bgGradientEnd="@color/gradientE"
            app:bgGradientStart="@color/gradientS"
            app:cornerRadius="@dimen/_24sdp" />
    </LinearLayout>


</LinearLayout>