<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_12sdp">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_back_setting" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_weight="1"
            android:fontFamily="@font/bv_600"
            android:includeFontPadding="false"
            android:text="@string/create_qr"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/ic_create_11" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/bv_400"
                    android:includeFontPadding="false"
                    android:text="@string/barcode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <com.dong.baselib.widget.layout.UiLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="vertical"
                app:bgColorDark="@color/transfer"
                app:bgColorLight="@color/transfer"
                app:cornerRadius="@dimen/_12sdp">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text_rounded"
                    android:fontFamily="@font/bv_400"
                    android:hint="@string/please_enter_something"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLength="7"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />


            </com.dong.baselib.widget.layout.UiLinearLayout>

            <TextView
                android:id="@+id/txtError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/bv_400"
                android:includeFontPadding="false"
                android:textColor="#F44336"
                android:textSize="@dimen/_10sdp" />

            <com.dong.baselib.widget.layout.UiLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_4sdp"
                android:id="@+id/lnSecurity"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:bgColorDark="@color/white"
                app:bgColorLight="@color/white"
                app:cornerRadius="@dimen/_12sdp">

                <TextView
                    android:id="@+id/extSecurity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edit_text_rounded"
                    android:fontFamily="@font/bv_400"
                    android:hint="@string/enter_pass"
                    android:includeFontPadding="false"
                    android:maxLength="100"
                    android:padding="@dimen/_12sdp"
                    android:text="EAN_8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_drop_down" />
            </com.dong.baselib.widget.layout.UiLinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_button_disabled"
                android:includeFontPadding="false"
                android:padding="@dimen/_11sdp"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/Gray_Cloud"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>